@@ -5,7 +5,8 @@ Changelog
 1.7.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix TransactionNote beeing to large and fail to commit the transaction.
+  [tschanzt]
 
 
 1.7.2 (2014-02-28)
